--- a/Cavour_(TO).mw
+++ b/Cavour_(TO).mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cavour''' éte 'nu comune [[Italie|tagliáne]] de 5.481 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
