--- a/Cercenasco.mw
+++ b/Cercenasco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cercenasco''' éte 'nu comune [[Italie|tagliáne]] de 1.774 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
