--- a/Ceresole_Reale.mw
+++ b/Ceresole_Reale.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ceresole Reale''' éte 'nu comune [[Italie|tagliáne]] de 158 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
