--- a/Chialamberto.mw
+++ b/Chialamberto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Chialamberto''' éte 'nu comune [[Italie|tagliáne]] de 362 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
