--- a/Chianocco.mw
+++ b/Chianocco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Chianocco''' éte 'nu comune [[Italie|tagliáne]] de 1.690 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
