--- a/Chiaverano.mw
+++ b/Chiaverano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Chiaverano''' éte 'nu comune [[Italie|tagliáne]] de 2.198 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
