--- a/Chieri.mw
+++ b/Chieri.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Chieri''' éte 'nu comune [[Italie|tagliáne]] de 34.312 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
