--- a/Chiesanuova.mw
+++ b/Chiesanuova.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Chiesanuova''' éte 'nu comune [[Italie|tagliáne]] de 199 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
