--- a/Chiusa_di_San_Michele.mw
+++ b/Chiusa_di_San_Michele.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Chiusa di San Michele''' éte 'nu comune [[Italie|tagliáne]] de 1.602 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
