--- a/Ciconio.mw
+++ b/Ciconio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ciconio''' éte 'nu comune [[Italie|tagliáne]] de 345 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
