--- a/Cintano.mw
+++ b/Cintano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cintano''' éte 'nu comune [[Italie|tagliáne]] de 260 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
