--- a/Claviere.mw
+++ b/Claviere.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Claviere''' éte 'nu comune [[Italie|tagliáne]] de 163 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
