--- a/Coazze.mw
+++ b/Coazze.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Coazze''' éte 'nu comune [[Italie|tagliáne]] de 2.884 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
