--- a/Collegno.mw
+++ b/Collegno.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Collegno''' éte 'nu comune [[Italie|tagliáne]] de 50.054 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
