--- a/Condove.mw
+++ b/Condove.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Condove''' éte 'nu comune [[Italie|tagliáne]] de 4.259 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
