--- a/Cossano_Canavese.mw
+++ b/Cossano_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cossano Canavese''' éte 'nu comune [[Italie|tagliáne]] de 549 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
