--- a/Cuorgnè.mw
+++ b/Cuorgnè.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cuorgnè''' éte 'nu comune [[Italie|tagliáne]] de 10.037 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
