--- a/Feletto.mw
+++ b/Feletto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Feletto''' éte 'nu comune [[Italie|tagliáne]] de 2.341 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
