--- a/Foglizzo.mw
+++ b/Foglizzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Foglizzo''' éte 'nu comune [[Italie|tagliáne]] de 2.180 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
