--- a/Forno_Canavese.mw
+++ b/Forno_Canavese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Forno Canavese''' éte 'nu comune [[Italie|tagliáne]] de 3.716 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
