--- a/Giaveno.mw
+++ b/Giaveno.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Giaveno''' éte 'nu comune [[Italie|tagliáne]] de 15.191 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
