--- a/Gravere.mw
+++ b/Gravere.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gravere''' éte 'nu comune [[Italie|tagliáne]] de 682 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
