--- a/Inverso_Pinasca.mw
+++ b/Inverso_Pinasca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Inverso Pinasca''' éte 'nu comune [[Italie|tagliáne]] de 659 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
