--- a/Issiglio.mw
+++ b/Issiglio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Issiglio''' éte 'nu comune [[Italie|tagliáne]] de 402 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
