--- a/La_Loggia.mw
+++ b/La_Loggia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''La Loggia''' éte 'nu comune [[Italie|tagliáne]] de 6.838 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
