--- a/Leinì.mw
+++ b/Leinì.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Leinì''' éte 'nu comune [[Italie|tagliáne]] de 11.946 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
