--- a/Levone.mw
+++ b/Levone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Levone''' éte 'nu comune [[Italie|tagliáne]] de 490 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
