--- a/Locana.mw
+++ b/Locana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Locana''' éte 'nu comune [[Italie|tagliáne]] de 1.806 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
