--- a/Lombardore.mw
+++ b/Lombardore.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lombardore''' éte 'nu comune [[Italie|tagliáne]] de 1.511 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
