--- a/Lugnacco.mw
+++ b/Lugnacco.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lugnacco''' éte 'nu comune [[Italie|tagliáne]] de 338 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
