--- a/Luserna_San_Giovanni.mw
+++ b/Luserna_San_Giovanni.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Luserna San Giovanni''' éte 'nu comune [[Italie|tagliáne]] de 7.820 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
