--- a/Marentino.mw
+++ b/Marentino.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Marentino''' éte 'nu comune [[Italie|tagliáne]] de 1.188 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Marentino]]
 [[en:Marentino]]
