--- a/Massello.mw
+++ b/Massello.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Massello''' éte 'nu comune [[Italie|tagliáne]] de 74 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[ca:Massello]]
 [[de:Massello]]
