--- a/Mathi.mw
+++ b/Mathi.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mathi''' éte 'nu comune [[Italie|tagliáne]] de 4.500 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Mathi]]
 [[en:Mathi]]
