--- a/Mattie.mw
+++ b/Mattie.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mattie''' éte 'nu comune [[Italie|tagliáne]] de 767 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
