--- a/Mazzè.mw
+++ b/Mazzè.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mazzè''' éte 'nu comune [[Italie|tagliáne]] de 3.973 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Mazzè]]
 [[en:Mazzè]]
