--- a/Meugliano.mw
+++ b/Meugliano.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Meugliano''' éte 'nu comune [[Italie|tagliáne]] de 109 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Meugliano]]
 [[en:Meugliano]]
