--- a/Mombello_di_Torino.mw
+++ b/Mombello_di_Torino.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mombello di Torino''' éte 'nu comune [[Italie|tagliáne]] de 395 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[de:Mombello di Torino]]
 [[en:Mombello di Torino]]
