--- a/Monastero_di_Lanzo.mw
+++ b/Monastero_di_Lanzo.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Monastero di Lanzo''' éte 'nu comune [[Italie|tagliáne]] de 424 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[ca:Monastero di Lanzo]]
 [[de:Monastero di Lanzo]]
