--- a/Moncalieri.mw
+++ b/Moncalieri.mw
@@ -2,7 +2,9 @@
 
 '''Moncalieri''' éte 'nu comune [[Italie|tagliáne]] de 55.983 crestiáne.
 
-[[Category:Gëografije]]
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
 
 [[ar:مونكالييري]]
 [[ca:Moncalieri]]
