--- a/Moncenisio.mw
+++ b/Moncenisio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Moncenisio''' éte 'nu comune [[Italie|tagliáne]] de 46 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Torino]]
+{{Provinge de Torino}}
