--- a/San_Sebastiano_Curone.mw
+++ b/San_Sebastiano_Curone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''San Sebastiano Curone''' éte 'nu comune [[Italie|tagliáne]] de 596 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
