--- a/Sant'Agata_Fossili.mw
+++ b/Sant'Agata_Fossili.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sant'Agata Fossili''' éte 'nu comune [[Italie|tagliáne]] de 433 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
