--- a/Serralunga_di_Crea.mw
+++ b/Serralunga_di_Crea.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Serralunga di Crea''' éte 'nu comune [[Italie|tagliáne]] de 617 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
