--- a/Sezzadio.mw
+++ b/Sezzadio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sezzadio''' éte 'nu comune [[Italie|tagliáne]] de 1.279 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
