--- a/Spigno_Monferrato.mw
+++ b/Spigno_Monferrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Spigno Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 1.174 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
