--- a/Spineto_Scrivia.mw
+++ b/Spineto_Scrivia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Spineto Scrivia''' éte 'nu comune [[Italie|tagliáne]] de 336 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
