--- a/Stazzano.mw
+++ b/Stazzano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Stazzano''' éte 'nu comune [[Italie|tagliáne]] de 2.217 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
