--- a/Tagliolo_Monferrato.mw
+++ b/Tagliolo_Monferrato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tagliolo Monferrato''' éte 'nu comune [[Italie|tagliáne]] de 1.504 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
