--- a/Tassarolo.mw
+++ b/Tassarolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tassarolo''' éte 'nu comune [[Italie|tagliáne]] de 599 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
