--- a/Ticineto.mw
+++ b/Ticineto.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ticineto''' éte 'nu comune [[Italie|tagliáne]] de 1.397 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
