--- a/Trisobbio.mw
+++ b/Trisobbio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Trisobbio''' éte 'nu comune [[Italie|tagliáne]] de 674 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Alessandria]]
+{{Provinge de Alessandria}}
