--- a/Ailoche.mw
+++ b/Ailoche.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ailoche''' éte 'nu comune [[Italie|tagliáne]] de 317 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
