--- a/Andorno_Micca.mw
+++ b/Andorno_Micca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Andorno Micca''' éte 'nu comune [[Italie|tagliáne]] de 3.549 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
