--- a/Benna.mw
+++ b/Benna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Benna''' éte 'nu comune [[Italie|tagliáne]] de 1.164 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
