--- a/Chiangarèdde.mw
+++ b/Chiangarèdde.mw
@@ -1,14 +1,10 @@
-Nome d'o prodotte: Chiangarèdde
+Nome d'u prodotte: Chiangarèdde
 
 Categorije: Paste fresche
 
 Zona de produzione: Ovonne 'a Pugghie 
 
 Regione: Pugghie
-
-
-
-
 
 Le Chiangarèdde so' 'u cchiù famus mangiare d'a Pugghie.
 
@@ -21,12 +17,11 @@ sale.
 
 Jindr'à recette tipica stonne c'ù 'e cim d' r'p, ma stonne puru c'u sugo de pumedore e c'à recotte asquànde.
 
-
-
-
-==Bibliografije==
+== Bibliografije ==
 
 *“Cucina pugliese di poveri” Luigi Sada. Edizione del Centro Librario di Bari, [[1974]]
 *“Puglia in bocca” Luigi Sada. Edizioni Vespro, [[1977]]
 *“Spaghetti e compagni” Luigi Sada. Biblioteca De la Taberna, [[1982]]
 *“La cucina pugliese” Luigi Sada. Edizione Newton-Compton, [[1994]]
+
+[[Category:Cucine]]
