--- a/Bioglio.mw
+++ b/Bioglio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Bioglio''' éte 'nu comune [[Italie|tagliáne]] de 1.092 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
