--- a/Borriana.mw
+++ b/Borriana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Borriana''' éte 'nu comune [[Italie|tagliáne]] de 849 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
