--- a/Brusnengo.mw
+++ b/Brusnengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Brusnengo''' éte 'nu comune [[Italie|tagliáne]] de 2.098 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
