--- a/Castelletto_Cervo.mw
+++ b/Castelletto_Cervo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Castelletto Cervo''' éte 'nu comune [[Italie|tagliáne]] de 843 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
