--- a/Cavaglià.mw
+++ b/Cavaglià.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cavaglià''' éte 'nu comune [[Italie|tagliáne]] de 3.665 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
