--- a/Cerreto_Castello.mw
+++ b/Cerreto_Castello.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cerreto Castello''' éte 'nu comune [[Italie|tagliáne]] de 667 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
