--- a/Coggiola.mw
+++ b/Coggiola.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Coggiola''' éte 'nu comune [[Italie|tagliáne]] de 2.355 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
