--- a/Cossato.mw
+++ b/Cossato.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cossato''' éte 'nu comune [[Italie|tagliáne]] de 15.001 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
