--- a/Crosa.mw
+++ b/Crosa.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Crosa''' éte 'nu comune [[Italie|tagliáne]] de 336 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
