--- a/Dorzano.mw
+++ b/Dorzano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Dorzano''' éte 'nu comune [[Italie|tagliáne]] de 446 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
