--- a/Gifflenga.mw
+++ b/Gifflenga.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gifflenga''' éte 'nu comune [[Italie|tagliáne]] de 111 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
