--- a/Graglia.mw
+++ b/Graglia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Graglia''' éte 'nu comune [[Italie|tagliáne]] de 1.609 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
