--- a/Lessona.mw
+++ b/Lessona.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Lessona''' éte 'nu comune [[Italie|tagliáne]] de 2.487 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
