--- a/Massazza.mw
+++ b/Massazza.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Massazza''' éte 'nu comune [[Italie|tagliáne]] de 579  crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
 
 [[de:Massazza]]
 [[en:Massazza]]
