--- a/Masserano.mw
+++ b/Masserano.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Masserano''' éte 'nu comune [[Italie|tagliáne]] de 2.313 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
 
 [[de:Masserano]]
 [[en:Masserano]]
