--- a/Mezzana_Mortigliengo.mw
+++ b/Mezzana_Mortigliengo.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mezzana Mortigliengo''' éte 'nu comune [[Italie|tagliáne]] de 647 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
 
 [[de:Mezzana Mortigliengo]]
 [[en:Mezzana Mortigliengo]]
