--- a/Miagliano.mw
+++ b/Miagliano.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Miagliano''' éte 'nu comune [[Italie|tagliáne]] de 587 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
 
 [[de:Miagliano]]
 [[en:Miagliano]]
