--- a/Mongrando.mw
+++ b/Mongrando.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mongrando''' éte 'nu comune [[Italie|tagliáne]] de 4.021 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
 
 [[de:Mongrando]]
 [[en:Mongrando]]
