--- a/Mosso.mw
+++ b/Mosso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Mosso''' éte 'nu comune [[Italie|tagliáne]] de 1.804 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
