--- a/Mottalciata.mw
+++ b/Mottalciata.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Mottalciata''' éte 'nu comune [[Italie|tagliáne]] de 1.415 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
 
 [[de:Mottalciata]]
 [[en:Mottalciata]]
