--- a/Muzzano.mw
+++ b/Muzzano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Muzzano''' éte 'nu comune [[Italie|tagliáne]] de 673 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
