--- a/Netro.mw
+++ b/Netro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Netro''' éte 'nu comune [[Italie|tagliáne]] de 1.004 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
