--- a/Occhieppo_Superiore.mw
+++ b/Occhieppo_Superiore.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Occhieppo Superiore''' éte 'nu comune [[Italie|tagliáne]] de 2.881 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
