--- a/Pettinengo.mw
+++ b/Pettinengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Pettinengo''' éte 'nu comune [[Italie|tagliáne]] de 1.597 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
