--- a/Piedicavallo.mw
+++ b/Piedicavallo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Piedicavallo''' éte 'nu comune [[Italie|tagliáne]] de 187 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
