--- a/Ponderano.mw
+++ b/Ponderano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ponderano''' éte 'nu comune [[Italie|tagliáne]] de 3.833 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
