--- a/Portula.mw
+++ b/Portula.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Portula''' éte 'nu comune [[Italie|tagliáne]] de 1.485 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
