--- a/Quittengo.mw
+++ b/Quittengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Quittengo''' éte 'nu comune [[Italie|tagliáne]] de 238 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
