--- a/Ronco_Biellese.mw
+++ b/Ronco_Biellese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ronco Biellese''' éte 'nu comune [[Italie|tagliáne]] de 1.533 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
