--- a/Roppolo.mw
+++ b/Roppolo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Roppolo''' éte 'nu comune [[Italie|tagliáne]] de 854 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
