--- a/Sala_Biellese.mw
+++ b/Sala_Biellese.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sala Biellese''' éte 'nu comune [[Italie|tagliáne]] de 601 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
