--- a/Sagliano_Micca.mw
+++ b/Sagliano_Micca.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sagliano Micca''' éte 'nu comune [[Italie|tagliáne]] de 1.676 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
