--- a/Sandigliano.mw
+++ b/Sandigliano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Sandigliano''' éte 'nu comune [[Italie|tagliáne]] de 2.733 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
