--- a/Selve_Marcone.mw
+++ b/Selve_Marcone.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Selve Marcone''' éte 'nu comune [[Italie|tagliáne]] de 103 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
