--- a/Soprana.mw
+++ b/Soprana.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Soprana''' éte 'nu comune [[Italie|tagliáne]] de 835 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
