--- a/Tavigliano.mw
+++ b/Tavigliano.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Tavigliano''' éte 'nu comune [[Italie|tagliáne]] de 936 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
