--- a/Ternengo.mw
+++ b/Ternengo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Ternengo''' éte 'nu comune [[Italie|tagliáne]] de 307 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
