--- a/Torrazzo.mw
+++ b/Torrazzo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Torrazzo''' éte 'nu comune [[Italie|tagliáne]] de 188 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
