--- a/Trivero.mw
+++ b/Trivero.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Trivero''' éte 'nu comune [[Italie|tagliáne]] de 6.663 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge de Biella]]
+{{Provinge de Biella}}
