--- a/Belgirate.mw
+++ b/Belgirate.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Belgirate''' éte 'nu comune [[Italie|tagliáne]] de 521 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
