--- a/Calasca-Castiglione.mw
+++ b/Calasca-Castiglione.mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Calasca-Castiglione''' éte 'nu comune [[Italie|tagliáne]] de 760 (388 maschi e 372 femmine) crestiáne.
-[[Category:Gëografije]]
+'''Calasca-Castiglione''' éte 'nu comune [[Italie|tagliáne]] de 760 (388 maschele e 372 femmene) crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
