--- a/Cannobio.mw
+++ b/Cannobio.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cannobio''' éte 'nu comune [[Italie|tagliáne]] de 5.113 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
