--- a/Cavaglio-Spoccia.mw
+++ b/Cavaglio-Spoccia.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cavaglio-Spoccia''' éte 'nu comune [[Italie|tagliáne]] de 309 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
