--- a/Crodo.mw
+++ b/Crodo.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Crodo''' éte 'nu comune [[Italie|tagliáne]] de 1.490 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
