--- a/Cursolo-Orasso.mw
+++ b/Cursolo-Orasso.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Cursolo-Orasso''' éte 'nu comune [[Italie|tagliáne]] de 119 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
