--- a/Domodossola.mw
+++ b/Domodossola.mw
@@ -33,6 +33,8 @@
 '''Domodossola''' (int'â lengua lommarda occidentale ''Ël Dòm'') éte 'nu comune [[Italie|tagliáne]] de 18.382 crestiáne.
 
 [[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
 
 [[de:Domodossola]]
 [[en:Domodossola]]
