--- a/Gravellona_Toce.mw
+++ b/Gravellona_Toce.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gravellona Toce''' éte 'nu comune [[Italie|tagliáne]] de 7.589 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
