--- a/Gurro.mw
+++ b/Gurro.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Gurro''' éte 'nu comune [[Italie|tagliáne]] de 274 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
