--- a/Intragna.mw
+++ b/Intragna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Intragna''' éte 'nu comune [[Italie|tagliáne]] de 125 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
