--- a/Malesco.mw
+++ b/Malesco.mw
@@ -1,7 +1,9 @@
 {{S}}
 '''Malesco''' éte 'nu comune [[Italie|tagliáne]] de 1.473 crestiáne.
 
-[[Category:Gëografije]]
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
 
 [[de:Malesco]]
 [[en:Malesco]]
