--- a/Masera.mw
+++ b/Masera.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Masera''' éte 'nu comune [[Italie|tagliáne]] de 8.226 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
 
 [[de:Masera]]
 [[en:Masera]]
