--- a/Montescheno.mw
+++ b/Montescheno.mw
@@ -1,6 +1,9 @@
 {{S}}
 '''Montescheno''' éte 'nu comune [[Italie|tagliáne]] de 441 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
 
 [[de:Montescheno]]
 [[en:Montescheno]]
