--- a/Omegna.mw
+++ b/Omegna.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Omegna''' éte 'nu comune [[Italie|tagliáne]] de 15.972 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
