--- a/Piedimulera.mw
+++ b/Piedimulera.mw
@@ -1,3 +1,6 @@
 {{S}}
 '''Piedimulera''' éte 'nu comune [[Italie|tagliáne]] de 1.672 crestiáne.
-[[Category:Gëografije]]
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
