--- a/Re_(VB).mw
+++ b/Re_(VB).mw
@@ -1,3 +1,6 @@
 {{S}}
-'''Re (VB)''' éte 'nu comune [[Italie|tagliáne]] de 830 crestiáne.
-[[Category:Gëografije]]
+'''Re''' éte 'nu comune [[Italie|tagliáne]] de 830 crestiáne.
+
+[[Category:Comune d'u Piemonte]]
+[[Category:Comune d'a provinge d'u Verbano-Cusio-Ossola]]
+{{Provinge d'u Verbano-Cusio-Ossola}}
